--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/app/styles/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/snapsvg/dist/snap.svg-min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -92,7 +94,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/app/styles/styles.scss"
             ],
             "scripts": []
           }
@@ -123,6 +125,7 @@
           }
         }
       }
-    }},
+    }
+  },
   "defaultProject": "book-locator-frontend"
 }
