--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "_redirects"
+              "src/_redirects"
             ],
             "styles": [
               "src/app/styles/styles.scss"
@@ -93,7 +93,7 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "_redirects"
+              "src/_redirects"
             ],
             "styles": [
               "src/app/styles/styles.scss"
