--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.1.0",
+    "@angular/cdk": "^10.2.1",
     "@angular/common": "~10.1.0",
     "@angular/compiler": "~10.1.0",
     "@angular/core": "~10.1.0",
@@ -21,8 +22,13 @@
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "angular2-ladda": "^3.1.0",
     "bootstrap": "^4.5.2",
+    "ladda": "^2.0.1",
+    "ng-inline-svg": "^11.0.0",
     "ngx-bootstrap": "^6.1.0",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.0",
     "rxjs": "~6.6.0",
     "snapsvg": "^0.5.1",
     "tslib": "^2.0.0",
