updated login procedure, added logout option

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ladda": "^2.0.1",
     "ng-inline-svg": "^11.0.0",
     "ngx-bootstrap": "^6.1.0",
+    "ngx-gravatar": "^9.1.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
     "rxjs": "~6.6.0",
