--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/platform-browser-dynamic": "~11.0.0",
     "@angular/router": "~11.0.0",
     "@fortawesome/fontawesome-free": "^5.15.1",
+    "@swimlane/ngx-charts": "^16.0.0",
     "angular2-ladda": "^3.1.1",
     "bootstrap": "^4.5.3",
     "ladda": "^2.0.1",
+    "luxon": "^1.25.0",
     "ng-inline-svg": "^11.0.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-gravatar": "^10.0.0",
@@ -39,9 +41,10 @@
     "@angular-devkit/build-angular": "~0.1100.1",
     "@angular/cli": "~11.0.1",
     "@angular/compiler-cli": "~11.0.0",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/luxon": "^1.25.0",
+    "@types/node": "^12.11.1",
     "@types/snapsvg": "^0.5.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
