--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rxjs": "~6.6.0",
     "snapsvg": "^0.5.1",
     "tslib": "^2.0.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
