--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@swimlane/ngx-charts": "^16.0.0",
     "angular2-ladda": "^3.1.1",
     "bootstrap": "^4.5.3",
+    "classlist.js": "^1.1.20150312",
     "ladda": "^2.0.1",
     "luxon": "^1.25.0",
     "ng-inline-svg": "^11.0.0",
