--- a/package.json
+++ b/package.json
@@ -21,22 +21,22 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
-    "@fortawesome/fontawesome-free": "^5.15.1",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular2-ladda": "^3.1.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^3.8.1",
+    "core-js": "^3.8.3",
     "ladda": "^2.0.1",
-    "luxon": "^1.25.0",
-    "ng-inline-svg": "^11.0.0",
+    "luxon": "^1.26.0",
+    "ng-inline-svg": "^11.0.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-gravatar": "^10.0.0",
-    "primeicons": "^4.0.0",
+    "primeicons": "^4.1.0",
     "primeng": "^10.0.3",
     "rxjs": "~6.6.0",
     "snapsvg": "^0.5.1",
-    "tslib": "^2.0.0",
+    "tslib": "^2.1.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
@@ -44,10 +44,10 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "^3.6.3",
     "@types/jasminewd2": "~2.0.3",
-    "@types/luxon": "^1.25.0",
-    "@types/node": "^12.11.1",
+    "@types/luxon": "^1.26.0",
+    "@types/node": "^12.20.1",
     "@types/snapsvg": "^0.5.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
@@ -60,6 +60,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.7"
   }
 }
