--- a/package.json
+++ b/package.json
@@ -12,47 +12,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.1",
-    "@angular/cdk": "^11.2.1",
-    "@angular/common": "~11.2.1",
-    "@angular/compiler": "~11.2.1",
-    "@angular/core": "~11.2.1",
-    "@angular/forms": "~11.2.1",
-    "@angular/platform-browser": "~11.2.1",
-    "@angular/platform-browser-dynamic": "~11.2.1",
-    "@angular/router": "~11.2.1",
-    "@fortawesome/fontawesome-free": "^5.15.2",
+    "@angular/animations": "^11.2.7",
+    "@angular/cdk": "^11.2.6",
+    "@angular/common": "^11.2.7",
+    "@angular/compiler": "^11.2.7",
+    "@angular/core": "^11.2.7",
+    "@angular/forms": "^11.2.7",
+    "@angular/platform-browser": "^11.2.7",
+    "@angular/platform-browser-dynamic": "^11.2.7",
+    "@angular/router": "^11.2.7",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@swimlane/ngx-charts": "^16.0.0",
     "angular2-ladda": "^3.1.1",
     "bootstrap": "^4.6.0",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^3.8.3",
+    "core-js": "^3.9.1",
     "ladda": "^2.0.1",
     "luxon": "^1.26.0",
     "ng-inline-svg": "^11.0.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-gravatar": "^10.0.0",
     "primeicons": "^4.1.0",
-    "primeng": "^10.0.3",
-    "rxjs": "~6.6.0",
+    "primeng": "^11.3.1",
+    "rxjs": "^6.6.6",
     "snapsvg": "^0.5.1",
     "tslib": "^2.1.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.1",
-    "@angular/cli": "~11.2.1",
-    "@angular/compiler-cli": "~11.2.1",
-    "@types/jasmine": "^3.6.3",
+    "@angular-devkit/build-angular": "^0.1102.6",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.7",
+    "@types/jasmine": "^3.6.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/luxon": "^1.26.0",
-    "@types/node": "^12.20.1",
+    "@types/luxon": "^1.26.2",
+    "@types/node": "^12.20.6",
     "@types/snapsvg": "^0.5.0",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.1",
+    "karma": "^6.1.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
